@@ -1,7 +1,6 @@
 package uk.gov.hmcts.reform.sscs.service;
 
 import static java.lang.String.format;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Stream.concat;
 import static java.util.stream.Stream.of;
 import static org.apache.commons.collections4.ListUtils.emptyIfNull;
@@ -58,13 +57,14 @@ public class CitizenLoginService {
         List<SscsCaseDetails> sscsCaseDetails = caseDetails.stream()
                 .map(sscsCcdConvertService::getCaseDetails)
                 .filter(AppealNumberGenerator::filterCaseNotDraftOrArchivedDraft)
-                .collect(toList());
+                .peek(this::attachOtherPartyDetails)
+                .toList();
         if (!isBlank(tya)) {
             log.info(format("Find case: Filtering for case with tya [%s] for user [%s]", tya, idamTokens.getUserId()));
             List<OnlineHearing> convert = convert(
                     sscsCaseDetails.stream()
                             .filter(casesWithSubscriptionMatchingTya(tya))
-                            .collect(toList()),
+                            .toList(),
                     idamTokens.getEmail()
             );
             log.info(format("Find case: Found [%s] cases for tya [%s] for user [%s]", convert.size(), tya, idamTokens.getUserId()));
@@ -78,13 +78,22 @@ public class CitizenLoginService {
         return convert;
     }
 
+    private void attachOtherPartyDetails(SscsCaseDetails sscsCaseDetailsItem) {
+        if (sscsCaseDetailsItem.getData().getOtherParties() == null) {
+            SscsCaseDetails sscsCaseDetails = ccdService.getByCaseId(sscsCaseDetailsItem.getId(), idamService.getIdamTokens());
+            if (sscsCaseDetails != null) {
+                sscsCaseDetailsItem.getData().setOtherParties(sscsCaseDetails.getData().getOtherParties());
+            }
+        }
+    }
+
     public List<OnlineHearing> findActiveCasesForCitizen(IdamTokens idamTokens) {
         log.info(format("Find case: Searching for active case with for user [%s]", idamTokens.getUserId()));
         List<CaseDetails> caseDetails = citizenCcdService.searchForCitizenAllCases(idamTokens);
         List<SscsCaseDetails> sscsCaseDetails = caseDetails.stream()
                 .map(sscsCcdConvertService::getCaseDetails)
                 .filter(AppealNumberGenerator::filterActiveCasesForCitizen)
-                .collect(toList());
+                .toList();
 
         log.info(format("Searching for active case without for user [%s]", idamTokens.getUserId()));
         List<OnlineHearing> convert = convert(sscsCaseDetails, idamTokens.getEmail());
@@ -98,7 +107,7 @@ public class CitizenLoginService {
         List<SscsCaseDetails> sscsCaseDetails = caseDetails.stream()
                 .map(sscsCcdConvertService::getCaseDetails)
                 .filter(AppealNumberGenerator::filterDormantCasesForCitizen)
-                .collect(toList());
+                .toList();
 
         log.info(format("Searching for dormant case without for user [%s]", idamTokens.getUserId()));
         List<OnlineHearing> convert = convert(sscsCaseDetails, idamTokens.getEmail());
@@ -111,7 +120,7 @@ public class CitizenLoginService {
                 .map(sscsCase -> onlineHearingService.loadHearing(sscsCase, null, email))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(toList());
+                .toList();
     }
 
     public Optional<OnlineHearing> associateCaseToCitizen(IdamTokens citizenIdamTokens, String tya, String email, String postcode) {
